data/derived/comb/progs/unify/prog2254.ml.out
Characters 261-262:
  (len,sum::a)
            ^
Error: This expression has type 'a * int list
       but an expression was expected of type int list
